updated PredicateParser to modern language-level